[tool.poetry]
name = "blowhole"
version = "0.0.2"
description = "blowhole is a tool for creating, managing, and using docker-based development (or other) environments."
authors = ["Questioneer Limited <hello@questioneer.co.uk>"]
repository = "https://github.com/questioneer-ltd/blowhole"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
# Once py.typed is merged, used PyPI version of Typesystem
typesystem = {git = "https://github.com/pyinv/typesystem.git", branch = "master" }
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-commas = "^2.0"
flake8-comprehensions = "^2.1"
flake8-debugger = "^3.1"
flake8-docstrings = "^1.3"
flake8-isort = "^2.7"
flake8-mutable = "^1.2"
flake8-todo = "^0.7.0"
mypy = "^0.701"
packaging = "^19.0"
pytest = "^4.5"
pytest-cov = "^2.7"
rope = "^0.14.0"
isort = {version = "^4.3",extras = ["pyproject"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
